...
            android:checkedButton="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_gender_label">

            <RadioButton
                android:id="@+id/rb_male"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:text="@string/male"
                android:textColor="@color/text_primary"
                android:buttonTint="@color/sage_green"
                android:layout_marginVertical="@dimen/gender_option_spacing"
                android:checked="false"
                tools:text="Male" />

            <RadioButton
                android:id="@+id/rb_female"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:text="@string/female"
                android:textColor="@color/text_primary"
                android:buttonTint="@color/sage_green"
                android:layout_marginVertical="@dimen/gender_option_spacing"
                android:checked="false"
                tools:text="Female" />

            <RadioButton
                android:id="@+id/rb_other"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:text="@string/other"
                android:textColor="@color/text_primary"
                android:buttonTint="@color/sage_green"
                android:layout_marginVertical="@dimen/gender_option_spacing"
                android:checked="false"
                tools:text="Other" />

            <RadioButton
                android:id="@+id/rb_prefer_not_to_say"
                android:layout_width="match_parent"
                android:layout_height="@dimen/touch_target_min"
                android:text="@string/prefer_not_to_say"
                android:textColor="@color/text_primary"
                android:buttonTint="@color/sage_green"
                android:layout_marginVertical="@dimen/gender_option_spacing"
...
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_height_label">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_height"
                style="@style/VibeHealth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/height">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_height"
                    style="@style/VibeHealth.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="175" />

...
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_weight_label">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_weight"
                style="@style/VibeHealth.TextInputLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_small"
                android:hint="@string/weight">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_weight"
                    style="@style/VibeHealth.TextInputEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    tools:text="70" />

...
                tools:text="kg" />

        </LinearLayout>

        <!-- Continue Button -->
        <Button
            android:id="@+id/btn_continue"
            style="@style/VibeHealth.Button.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_xxlarge"
            android:enabled="false"
            android:text="@string/continue_button"
...
